8200243: System error message is decoded as invalid encoding in Windows

Reviewed-by: alanb